--- a/index.html
+++ b/index.html
@@ -1,13 +1,46 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>fe</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Primary Meta Tags -->
+  <meta name="title" content="Social Media" />
+  <meta name="description" content="A modern social media platform for sharing posts and reactions" />
+  <meta name="keywords" content="social media, posts, reactions, sharing, community" />
+  <meta name="author" content="Social Media App" />
+  <meta name="robots" content="index, follow" />
+  <meta name="language" content="English" />
+  <meta name="theme-color" content="#000000" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://fe-social-two.vercel.app" />
+  <meta property="og:title" content="Social Media" />
+  <meta property="og:description" content="A modern social media platform for sharing posts and reactions" />
+  <meta property="og:image" content="https://img.freepik.com/free-vector/red-logo-black-background_1195-52.jpg" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://fe-social-two.vercel.app" />
+  <meta property="twitter:title" content="Social Media" />
+  <meta property="twitter:description" content="A modern social media platform for sharing posts and reactions" />
+  <meta property="twitter:image" content="https://img.freepik.com/free-vector/red-logo-black-background_1195-52.jpg" />
+
+  <!-- Apple -->
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+  <meta name="apple-mobile-web-app-title" content="Social Media" />
+  <link rel="apple-touch-icon" href="/vite.svg" />
+
+  <title>Social Media</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
